Removing unnecessary text from tags

--- a/notifications.html
+++ b/notifications.html
@@ -4,11 +4,11 @@
 <head>
 	<title>ClickyChrome Notification</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="/css/_reset.css" />
-	<link rel="stylesheet" type="text/css" href="/css/notifications.css" />
-	<script type="text/javascript" src="/javascript/jquery.js"></script>
-	<script type="text/javascript" src="/javascript/functions.js"></script>
-	<script type="text/javascript" src="/javascript/notifications.js"></script>
+	<link rel="stylesheet" href="/css/_reset.css" />
+	<link rel="stylesheet" href="/css/notifications.css" />
+	<script src="/javascript/jquery.js"></script>
+	<script src="/javascript/functions.js"></script>
+	<script src="/javascript/notifications.js"></script>
 </head>
 
 <body onload="ClickyChrome.Notifications.buildNotification()">
