--- a/options.html
+++ b/options.html
@@ -4,12 +4,12 @@
 <head>
 	<title>ClickyChrome Options</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="css/_reset.css" />
-	<link rel="stylesheet" type="text/css" href="css/colorbox.css" />
-	<link rel="stylesheet" type="text/css" href="css/options.css" />
-	<script type="text/javascript" src="javascript/jquery.js"></script>
-	<script type="text/javascript" src="javascript/functions.js"></script>
-	<script type="text/javascript" src="javascript/options.js"></script>
+	<link rel="stylesheet" href="css/_reset.css" />
+	<link rel="stylesheet" href="css/colorbox.css" />
+	<link rel="stylesheet" href="css/options.css" />
+	<script src="javascript/jquery.js"></script>
+	<script src="javascript/functions.js"></script>
+	<script src="javascript/options.js"></script>
 </head>
 
 <body onload="ClickyChrome.Options.init()">
