--- a/popup.html
+++ b/popup.html
@@ -4,14 +4,14 @@
 <head>
 	<title>ClickyChrome</title>
 	<meta charset="utf-8" />
-	<link rel="stylesheet" type="text/css" href="css/_reset.css" />
-	<link rel="stylesheet" type="text/css" href="css/popup.css" />
-	<script type="text/javascript" src="javascript/jquery.js"></script>
-	<script type="text/javascript" src="javascript/raphael.js"></script>
-	<script type="text/javascript" src="javascript/functions.js"></script>
-	<script type="text/javascript" src="javascript/process.js"></script>
-	<script type="text/javascript" src="javascript/build.js"></script>
-	<script type="text/javascript" src="javascript/popup.js"></script>
+	<link rel="stylesheet" href="css/_reset.css" />
+	<link rel="stylesheet" href="css/popup.css" />
+	<script src="javascript/jquery.js"></script>
+	<script src="javascript/raphael.js"></script>
+	<script src="javascript/functions.js"></script>
+	<script src="javascript/process.js"></script>
+	<script src="javascript/build.js"></script>
+	<script src="javascript/popup.js"></script>
 </head>
 
 <body onload="ClickyChrome.Popup.init()">
