--- a/background.html
+++ b/background.html
@@ -4,10 +4,10 @@
 <head>
 	<title>ClickyChrome Background</title>
 	<meta charset="utf-8" />
-	<script type="text/javascript" src="javascript/jquery.js"></script>
-	<script type="text/javascript" src="javascript/functions.js"></script>
-	<script type="text/javascript" src="javascript/process.js"></script>
-	<script type="text/javascript" src="javascript/background.js"></script>
+	<script src="javascript/jquery.js"></script>
+	<script src="javascript/functions.js"></script>
+	<script src="javascript/process.js"></script>
+	<script src="javascript/background.js"></script>
 </head>
 
 <body onload="ClickyChrome.Background.init()"></body>
