--- a/background.html
+++ b/background.html
@@ -10,6 +10,6 @@
 	<script src="javascript/background.js"></script>
 </head>
 
-<body onload="ClickyChrome.Background.init()"></body>
+<body></body>
 
 </html>
