--- a/options.html
+++ b/options.html
@@ -12,7 +12,7 @@
 	<script src="javascript/options.js"></script>
 </head>
 
-<body onload="ClickyChrome.Options.init()">
+<body>
 	<div id="wrapper">
 		<div id="header"><b>ClickyChrome</b><br />A Chrome Extension for Clicky Web Analytics</div>
 		<div class="divide"></div>
