--- a/popup.html
+++ b/popup.html
@@ -14,7 +14,7 @@
   <script src="javascript/popup.js"></script>
 </head>
 
-<body onload="ClickyChrome.Popup.init()">
+<body>
 <div id="wrapper">
   <div id="header">
     <img id="clicky-logo" src="images/clicky_logo.png" alt="Clicky Analytics"/>
