--- a/help/help_context.html
+++ b/help/help_context.html
@@ -1,7 +1,17 @@
 <div id="context_info">
-	<h1>Context Menu Integration</h1>
-	<img src="/images/help_context.png" class="help-context" alt="Context menu link" />
-	<p>If you enter a site domain, ClickyChrome will add an item to your context menu (when you right-click on a page) that will allow you to "View page stats." Just as the name implies, you will be taken to the Clicky stats page for whatever page of your site you were viewing.</p>
-	<p>For example, if I'm browsing my website and am viewing the page <em>example.com/some-cool-post.html</em>, I can right-click on the page, select "View page stats," and a new tab will open with the stats page for <em>some-cool-post.html</em>.</p>
-	<p>If you want to remove the context menu for a site, simply delete the domain field for that site.</p>
+  <h1>Context Menu Integration</h1>
+  <img src="/images/help_context.png" class="help-context" alt="Context menu link" />
+  <p>
+    If you enter a site domain, ClickyChrome will add an item to your context menu (when you
+    right-click on a page) that will allow you to "View page stats." Just as the name implies, you
+    will be taken to the Clicky stats page for whatever page of your site you were viewing.
+  </p>
+  <p>
+    For example, if I'm browsing my website and am viewing the page
+    <em>example.com/some-cool-post.html</em>, I can right-click on the page, select "View page
+    stats," and a new tab will open with the stats page for <em>some-cool-post.html</em>.
+  </p>
+  <p>
+    If you want to remove the context menu for a site, simply delete the domain field for that site.
+  </p>
 </div>
