--- a/help/sample_notification.html
+++ b/help/sample_notification.html
@@ -28,7 +28,7 @@
             <div class="goal_user"><a href="#">127.0.0.1</a></div>
             <div class="goal_geo">
               <img
-                src="http://static.getclicky.com/media/flags/us.gif"
+                src="https://static.clicky.com/media/flags/us.gif"
                 class="goal_flag"
                 alt="US"
               />Chicago, IL, USA
@@ -45,7 +45,7 @@
             </div>
             <div class="goal_geo">
               <img
-                src="http://static.getclicky.com/media/flags/us.gif"
+                src="https://static.clicky.com/media/flags/us.gif"
                 class="goal_flag"
                 alt="US"
               />Indianapolis, IN, USA
