--- a/help/help_options.html
+++ b/help/help_options.html
@@ -2,42 +2,28 @@
   <h1>Clicky Chrome Options</h1>
   <dl>
     <dt>Badge Color</dt>
-    <dd>Not much to explain, what color do you like?</dd>
+    <dd><p>Not much to explain, what color do you like?</p></dd>
     <dt>Badge Count</dt>
     <dd>
-      What do you want the counter on the ClickyChrome icon to keep track of? You can have it
-      display the number of visitors currently online, the total number of visitors today, or the
-      total number of goals completed today.
+      <p>
+        What do you want the counter on the ClickyChrome icon to keep track of? You can have it
+        display the number of visitors currently online, the total number of visitors today, or the
+        total number of goals completed today.
+      </p>
+      <p>
+        Goal checking and badge updates adapt to your usage: every minute when active, reducing to
+        every 2-10 minutes when idle, and pausing completely after 2 hours of inactivity to conserve
+        API quota.
+      </p>
     </dd>
     <dt>Goal Notification</dt>
     <dd>
+      <p>You can be notified via desktop notification whenever a visitor completes a goal.</p>
       <p>
-        You can be notified via HTML5 desktop notifications whenever a visitor completes a goal.
-      </p>
-      <p>
-        <a id="sample_notification" href="#" title="Behold HTML5 glory!"
+        <a id="sample_notification" href="#" title="View example notification."
           >View example notification.</a
         >
       </p>
-      <p>When a goal is completed, it will display the following information:</p>
-      <ul>
-        <li>List of goals the visitor has completed in this session</li>
-        <li>Total value of goals completed</li>
-        <li>Visitor's geolocation, as well as IP or custom username you have assigned</li>
-        <li>Start time of visit</li>
-      </ul>
-      <p>
-        When more than one visitor has completed a goal, you'll see an arrow in the title bar that
-        you can click to scroll through the visitors.
-      </p>
-      <p>
-        Notifications can be set to display for either 10, 20 or 30 seconds before disappearing.
-        However, if you hover over a notification it will stay visible until you manually close it.
-      </p>
-      <p>
-        The example notification above will not automatically expire, you have to manually close it.
-      </p>
-      <p>Goal checking and badge counters update every minute when actively using your browser.</p>
     </dd>
   </dl>
 </div>
